(PC-4732): Fix missing background for new booking recap history status label

--- a/src/styles/components/pages/Bookings/BookingsRecapTable/CellsFormatter/_BookingStatusCell.scss
+++ b/src/styles/components/pages/Bookings/BookingsRecapTable/CellsFormatter/_BookingStatusCell.scss
@@ -23,6 +23,10 @@
     background-color: $green-valid;
   }
 
+  .booking-status-confirmed {
+    background-color: $black;
+  }
+
   .booking-status-wrapper {
     position: relative;
     line-height: $body-line-height;
